# elhaiba-project-backend

./: .dockerignore  .env  .env.prod.example  .gitignore  API_ROUTES.md  Cargo.docker.toml  Cargo.simple.toml  Cargo.toml  Dockerfile  PROJECT_STATUS.md  RUST_BENCHMARKING_GUIDE.md  RUST_TESTING_GUIDE.md  build.sh  docker-compose.prod.yml  docker-compose.yml  manage-volumes.sh  setup-dev.sh
bench_results/: jwt.txt  jwt_memory.txt  password.txt  password_memory.txt
benches/: jwt_benchmarks.rs  jwt_memory_benchmarks.rs  password_benchmarks.rs  password_memory_benchmarks.rs
docker/: README.md
docker/redis/: redis.conf
docs/: email_utility.md  jwt_utility.md  minio_utility.md  password_reset_utility.md  password_utility.md  redis_utility.md
examples/: log_rotation_demo.rs
examples/email/: send_email.rs
examples/jwt/: generate_token.rs
src/: lib.rs  main.rs
src/app/: app.rs
src/config/: admin_user_conf.rs  app_conf.rs  email_conf.rs  jwt_conf.rs  minio_conf.rs  mod.rs  mongo_conf.rs  password_reset_conf.rs  redis_conf.rs
src/dto/: mod.rs  quote_dto.rs
src/handler/: mod.rs  quote_handler.rs  user_handler.rs
src/middlewares/: admin_middleware.rs  mod.rs
src/model/: mod.rs  quote.rs  quote_file.rs  user.rs
src/repository/: mod.rs  quote_file_repo.rs  quote_note_repo.rs  quote_repo.rs  repository_error.rs  user_repo.rs
src/router/: mod.rs  quote_router.rs  user_router.rs
src/service/: mod.rs  quote_service.rs  user_service.rs
src/util/: email.rs  error.rs  jwt.rs  logger.rs  minio.rs  (+4 more)
tests/: email_tests.rs  jwt_tests.rs  minio_tests.rs  password_reset_tests.rs  password_tests.rs  quote_handler_create_test.rs  quote_handler_test.rs  quote_note_repo_test.rs  quote_repo_test.rs  redis_tests.rs  user_handler_test.rs
volumes/: README.md
(+2 files in other folders)
